Add unit tests for OffertMessageListener and enhance Product class
- Implemented two unit tests for OffertMessageListener: one for registering offers upon product announcements and another for handling winner notifications without placing offers.
- Updated the Product class to include a getter for startPrice.
- Fixed a bug in OffertMessageListener where the start price was incorrectly set.
- Added JUnit dependency to pom.xml for testing purposes.
- Modified applicationContext.xml to use an AnonymousQueue and updated routing patterns.
- Updated Surefire reports to reflect the new tests and their results.